--- a/style.css
+++ b/style.css
@@ -1,21 +1,103 @@
-*, *::before, *::after {
+html, body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
 }
 
-::root {}
-
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    cursor: crosshair;
+    font-family: Poppins;
+    background-color: #ffffff;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%23ffffff' stroke-width='.5' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cuse fill='%23fafafa' href='%23s' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23f5f5f5' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23f5f5f5' href='%23s'/%3E%3Cuse fill='%23f0f0f0' href='%23s' x='2'/%3E%3Cuse fill='%23f0f0f0' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23ebebeb'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23ebebeb'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23e5e5e5'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23ffffff'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23e0e0e0'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%232614ff'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%232614ff'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%232614ff'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+h1 {
+    text-align: center;
+    font-size: 50px;
+}
+
+.overlay-2 {
+    z-index: 0;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background: #483bffc4;
+}
+
+.overlay {
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background: #0a013d;
+}
+
+.overlay p {
+    font-size: 100px;
+    font-weight: 800;
+    text-align: center;
+}
+
+.screen {
+    color: #0b0199;
+    font-family: Poppins;
+    position: absolute;
+    top: 32%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.myBtn {
+    font-family: Poppins;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+button {
+    display: block;
+    padding: 24px 48px;
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 12px;
+    letter-spacing: 6px;
+    color: #fff;
+    border: 2px solid #fff;
+    text-transform: uppercase;
+    outline: none;
+    overflow: hidden;
+    background: none;
+    z-index: 1;
+    cursor: crosshair;
+    transition: 0.8s ease-out;
+}
+
+.myBtn:hover {
+    color: #101010;
+    cursor: crosshair;
+}
+
+.myBtn:before {
+    content: "";
+    position: absolute;
+    background: #fff;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 100%;
+    z-index: -1;
+    transition: top 0.8s ease-out;
+}
+
+.myBtn:hover:before {
+    top: 0;
 }
 
 .board {
-    width: 100vw;
-    height: 100vh;
     display: grid;
     justify-content: center;
     align-content: center;
@@ -25,9 +107,10 @@ body {
     border: #1e208f solid 20px;
 }
 
-h4{
+h4 {
     text-align: center;
 }
+
 .box {
     width: 100px;
     height: 100px;
@@ -88,15 +171,15 @@ h4{
 
 /* THE START OF CIRCLE STYLES */
 
-.board.circle .box:not(.x):not(.circle):hover:before, .board.circle .box:not(.x):not(.circle):hover:after {
+.board.circle .box:not(.x):not(.circle):hover:before, .board.circle .box:not(.x):not(.circle):hover::after {
     background-color: grey;
 }
 
-.board.circle .box:before {
+.box.circle::before, .box.x::after {
     background-color: black;
 }
 
-.box.circle::before, .box.circle::after, .board.circle .box:not(.x):not(.circle):hover:before, .board.circle .box:not(.x):not(.circle):hover:after {
+.box.circle::before, .box.circle::after, .board.circle .box:not(.x):not(.circle):hover:before, .board.circle .box:not(.x):not(.circle):hover::after {
     content: '';
     position: absolute;
     width: 80px;
@@ -104,12 +187,12 @@ h4{
     border-radius: 50%;
 }
 
-.box.circle::before, .board.circle .box:not(.x):not(.circle):hover:before {
+.box.circle::before, .board.circle .box:not(.x):not(.circle):hover::before {
     width: 80px;
     height: 80px;
 }
 
-.box.circle::after, .board.circle .box:not(.x):not(.circle):hover:after {
+.box.circle::after, .board.circle .box:not(.x):not(.circle):hover::after {
     width: 60px;
     height: 60px;
     background-color: white;
@@ -132,7 +215,6 @@ h4{
 
 .winning-message button {
     font-size: 3rem;
-    background-color: white;
     border: 1px solid black;
     padding: .25em .5em;
     cursor: pointer;
@@ -146,121 +228,4 @@ h4{
 
 .winning-message.show {
     display: flex;
-}
-/* CSS INTRO  */
-html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    cursor: crosshair;
-    font-family: Poppins;
-    background-color: #ffffff;
-}
-
-.content {
-    width: 60%;
-    margin: 0 auto;
-    z-index: -1;
-    position: absolute;
-    top: 60%;
-    left: 10%;
-    transform: translate(0, -50%);
-}
-
-.content h1 {
-    font-family: Poppins;
-    font-size: 10px;
-    color: #101010;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-}
-
-.content p {
-    margin-top: 0;
-    text-align: left;
-    color: #101010;
-    font-weight: 100;
-}
-
-.overlay-2 {
-    z-index: 0;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    background: #2250b3;
-}
-
-.overlay {
-    z-index: 1;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    background: #1969c5;
-}
-
-.overlay p {
-    font-size: 100px;
-    font-weight: 800;
-    text-align: center;
-}
-
-.screen {
-    color: #100347;
-    font-family: Poppins;
-    position: absolute;
-    top: 32%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.myBtn {
-    font-family: Poppins;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-button {
-    display: block;
-    padding: 24px 48px;
-    font-family: Poppins;
-    font-weight: 700;
-    font-size: 12px;
-    letter-spacing: 6px;
-    color: #fff;
-    border: 2px solid #fff;
-    text-transform: uppercase;
-    outline: none;
-    overflow: hidden;
-    background: none;
-    z-index: 1;
-    cursor: crosshair;
-    transition: 0.8s ease-out;
-}
-
-.myBtn:hover {
-    color: #101010;
-    cursor: crosshair;
-}
-
-.myBtn:before {
-    content: "";
-    position: absolute;
-    background: #fff;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 100%;
-    z-index: -1;
-    transition: top 0.8s ease-out;
-}
-
-.myBtn:hover:before {
-    top: 0;
 }
